<resources>
    <string name="app_ok">OK</string>
    <string name="app_next">Next</string>
    <string name="app_finish">Finish</string>
    <string name="app_error_network">There was a network error. Try again later.</string>
    <string name="app_error_unknown">There was an unknown error. Try again later.</string>
    <string name="app_error_oom">"Error: out of memory.</string>
    <string name="app_price_format">$%.2f</string>
    <string name="app_payment_method_format">%1$s •••• %2$s</string>
    <string name="app_time_format">hh:mm a</string>
    <string name="app_date_format">MM/dd/yyyy</string>
    <string name="app_datetime_format">MM/dd/yyyy, h:mm a</string>
    <string name="app_edit">Edit</string>
    <string name="app_save">Save</string>
    <string name="app_search">Search</string>
    <string name="app_more">More</string>
    <string name="app_vanpool_id_format">Vanpool #%1$d</string>
    <string name="app_miles_distance_format">%.1f mi</string>
    <string name="app_yes">Yes</string>
    <string name="app_no">No</string>
    <string name="app_continue">Continue</string>
    <string name="app_username_format">%1$s %2$s</string>
    <string name="app_middlescore">&#8211;</string>
    <string name="app_enable">Enable</string>
    <string name="app_new_line">\n</string>
    <string name="app_from">From</string>
    <string name="app_to">To</string>
    <string name="app_close">Close</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_trial_cta_default">Start Your Free Trial</string>
    <string name="app_need_help">Need help? <u>Contact Customer Support</u></string>
    <string name="facebook_app_id">528030565777317</string>
    <string name="fb_login_protocol_scheme">fb869623280823970</string>
    <string name="facebook_client_token">8bfc277e54647c67bf270a8aa2c2c181</string>
    <string name="progress_dialog_loading">Loading&#8230;</string>
    <string name="auth_sign_in">Log In</string>
    <string name="auth_register">Sign Up</string>
    <string name="auth_or">or continue with</string>
    <string name="gatecode_dialog_title">Access requirement</string>
    <string name="gatecode_dialog_subtitle">This location requires a gate code to access it. You can always view the code in the location details.</string>
    <string name="sign_in_title">Login</string>
    <string name="sign_in_email">e-mail Address</string>
    <string name="sign_in_name">First Name</string>
    <string name="sign_in_last_name">Last Name</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_forgot_password">Forgot Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_in_goto_sign_up">Don\'t have an account?</string>
    <string name="sign_in_error_facebook_email">Make sure your account has an email address</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="forgot_password_email">Email</string>
    <string name="forgot_password_button">Submit</string>
    <string name="forgot_password_dialog">Password recovery instructions have been sent to your email address</string>
    <string name="forgot_password_wrong_email">Invalid email address</string>
    <string name="register_title">Sign Up</string>
    <string name="register_email">Email</string>
    <string name="register_email_confirm">Confirm E-mail</string>
    <string name="register_password">Password</string>
    <string name="register_password_confirm">Re-enter the password</string>
    <string name="register_password_hint">Must be at least %1d characters</string>
    <string name="register_button">Create account</string>
    <string name="register_login">Already have an account?</string>
    <string name="register_login_2">Log In</string>
    <string name="register_tandc">By continuing you agree to our <a href="https://www.evcs.com/app/subscription-terms-and-conditions">Privacy Policy, Terms &amp; Conditions</a>.</string>
    <string name="placeholder_no_internet_dialog_title">Connection Lost</string>
    <string name="placeholder_no_internet_dialog_subtitle">We will try again as soon as the connection reestablishes</string>
    <string name="carsharing_dialog_in_development_title">Coming soon!</string>
    <string name="carsharing_dialog_in_development_body">These features are currently under development.</string>
    <string name="carsharing_location_error_title_path">carsharing_location_error_title</string>
    <string name="carsharing_location_error_subtitle_path">carsharing_location_error_subtitle</string>
    <string name="carsharing_gps_permissions_error_subtitle_path">carsharing_gps_permissions_error_subtitle</string>
    <string name="my_information_gender">Gender</string>
    <string name="my_information_gender_default">(select an option)</string>
    <string-array name="my_information_gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="my_information_birthdate">Birthdate</string>
    <string name="my_information_zip_code">Zipcode</string>
    <string name="my_information_phone_number">Phone Number</string>
    <string name="my_information_email_taken">Email has already been taken</string>
    <string name="profile_title">Profile</string>
    <string name="profile_username_format">%1$s %2$s</string>
    <string name="profile_billing_information">Payment Methods</string>
    <string name="profile_plan">Manage Plan</string>
    <string name="profile_account">Account Details</string>
    <string name="profile_support_section">Support</string>
    <string name="profile_support_contact">Contact Support</string>
    <string name="profile_support_faq">Help Center FAQ</string>
    <string name="profile_support_feedback">Submit a Request</string>
    <string name="profile_privacy_section">Privacy</string>
    <string name="profile_privacy_notifications">Communications</string>
    <string name="profile_privacy_tandc">Terms and Conditions</string>
    <string name="profile_account_section">Account</string>
    <string name="profile_charge_history">Charge History</string>
    <string name="profile_account_vehicle_info">Vehicle Information</string>
    <string name="profile_account_plans">Plans</string>
    <string name="profile_account_payment_methods">Payment Methods</string>
    <string name="profile_version">Version %s</string>
    <string-array name="profile_explore_plans_text_trial">
        <item>Get up to</item>
        <item>30 kWh free</item>
        <item>charging when you upgrade your plan!</item>
    </string-array>
    <string name="profile_explore_plans_text">Upgrade your plan for discounted charging</string>
    <string name="profile_payment_issue">There are pending unpaid charges on your account that must be resolved before you can continue.</string>
    <string name="profile_payment_button">Resolve</string>
    <string name="profile_subscription_issue_button">Update payment method</string>
    <string name="profile_avatar_change_title">Change Profile Picture</string>
    <string name="profile_avatar_change_camera_button">Take a picture</string>
    <string name="profile_avatar_change_library_button">Choose from library</string>
    <string name="vehicle_info_car">Make &amp; Model</string>
    <string name="vehicle_info_zipcde">Zipcode</string>
    <string name="activity_account_title">Account Detail</string>
    <string name="activity_account_email">Email</string>
    <string name="activity_account_save">Save Account Details</string>
    <string name="activity_account_name">Name</string>
    <string name="activity_account_change_password">Password</string>
    <string name="activity_account_sign_out">Sign Out</string>
    <string name="activity_account_delete_account">Delete Account</string>
    <string name="account_fragment_email_updated">Email updated</string>
    <string name="personal_information_update_successful">User updated</string>
    <string name="underage_issue_wording">error_underage</string>
    <string name="profile_billing_information_braintree_description">Choose your payment method</string>
    <string name="billing_information_credit_card_formatter">... %1$s</string>
    <string name="billing_information_credit_card_formatter_full">•••• •••• •••• %1$s</string>
    <string name="payment_method_fragment_title">Payment method</string>
    <string name="payment_methods_account_credit">Account Credit</string>
    <string name="payment_method_dialog_card_information">Card information</string>
    <string name="payment_method_dialog_make_default">Make default</string>
    <string name="payment_method_dialog_remove">Remove</string>
    <string name="payment_method_dialog_remove_subtitle">Are you sure you want to remove this payment method?</string>
    <string name="payment_method_dialog_remove_title">Warning</string>
    <string name="payment_method_dialog_default_subtitle">Are you sure you want to set this credit card as your default payment method? Your subscriptions will be charged to this card</string>
    <string name="payment_method_dialog_remove_button">Remove Card</string>
    <string name="payment_method_promo_codes">Promo codes</string>
    <string name="payment_method_add_coupon">Add a new promo code</string>
    <string name="delete_account_error_subtitle">You have an outstanding balance!</string>
    <string name="delete_account_error_description">There are unpaid charges on your account that must be resolved before you can delete your account.\n\nYou may choose to “Opt-Out”. Under this option, we will stop sending you marketing messages and stop sharing your data with third parties, unless it is applicable to paying off your balance.</string>
    <string name="delete_account_error_opt_out">Opt-Out</string>
    <string name="account_suspended_title">Account Suspended</string>
    <string name="account_suspended_button">Pay Balance</string>
    <string name="plan_info_title">Start Charging</string>
    <string name="manage_plan_payment_info">Payment Info</string>
    <string name="cancel_plan_sad">We\'re sad to see you go</string>
    <string name="cancel_plan_subscription_details">Subscription Details</string>
    <string name="cancel_plan_title">Cancel plan</string>
    <string name="cancel_plan_continue">Continue Cancelation</string>
    <string name="cancel_plan_cancel">Keep Plan</string>
    <string name="cancel_plan_confirmation">Do you want to continue canceling?</string>
    <string name="cancel_plan_subscription_end">Subscription End Date</string>
    <string name="cancel_plan_active_days">Active Days</string>
    <string name="cancel_plan_billing_cycle">Billing Cycle</string>
    <string name="cancel_plan_active_until">This will end your %1$s subscription to the %2$s plan.
        \nYour plan will stay active through the remainder of your last billing cycle and end on %3$s.</string>
    <string name="survey_title">Cancel plan</string>
    <string name="survey_love_feedback">We’d love your feedback!</string>
    <string name="survey_subtitle">We’re always looking to improve your experience. Please let us know why you’ve decided to cancel your plan:</string>
    <string name="survey_confirm">Confirm Cancelation</string>
    <string name="over_limit_warning_title">Attention!</string>
    <string name="over_limit_warning_text">Per your subscription details, this charging session falls outside your EVCS subscription allowance and is billed separately. \n\nIf your charging session payment is declined, your account will be suspended. \n\nYou will <b>NOT</b> be able to use your subscription plan or charge with the app until the balance has been paid.</string>
    <string name="over_limit_warning_button">Agree &amp; Continue</string>
    <string name="pay_balance_pending">Pending Payments</string>
    <string name="pay_balance_process_payment">Process Payment</string>
    <string name="pay_balance_title">Pay Balance</string>
</resources>