<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/evcs_white">

    <org.evcs.android.ui.view.shared.EVCSToolbar2
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/profile_account_vehicle_info"
        android:layout_marginBottom="@dimen/spacing_toolbar_bottom_extra"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/evcs_white"
        android:padding="@dimen/spacing_medium_extra">

        <org.evcs.android.ui.view.profile.ListButtonView
            android:id="@+id/fragment_account_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lbv_label="@string/vehicle_info_car" />

        <org.evcs.android.ui.view.profile.ListButtonView
            android:id="@+id/fragment_account_zipcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lbv_label="@string/vehicle_info_zipcde"/>

    </LinearLayout>


</LinearLayout>