<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/evcs_white">

    <org.evcs.android.ui.view.shared.EVCSToolbar2
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_toolbar_bottom_extra"
        custom:title="@string/activity_account_delete_account"/>

    <TextView
        android:id="@+id/fragment_register_cell_phone_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginStart="@dimen/spacing_large_k"
        android:layout_marginEnd="@dimen/spacing_large_k"
        android:textColor="@color/evcs_black"
        android:text="@string/delete_account_error_subtitle"
        style="@style/Title.Large"/>

    <TextView
        android:id="@+id/fragment_register_cell_phone_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_account_error_description"
        android:padding="@dimen/spacing_large_k"
        style="@style/Body.Medium.Black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_ariel_standard"
        android:paddingRight="@dimen/padding_ariel_standard"
        android:paddingTop="@dimen/padding_ariel_standard"
        android:paddingBottom="@dimen/spacing_medium">

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/fragment_delete_account_error_pay_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_account_error_pay_balance"
            android:layout_marginBottom="@dimen/spacing_medium_extra"
            style="@style/ButtonK.Orange" />

        <TextView
            android:id="@+id/fragment_delete_account_error_opt_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium_extra"
            android:text="@string/delete_account_error_opt_out"
            style="@style/ButtonK.BlackOutline"/>

        <TextView
            android:id="@+id/fragment_delete_account_error_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_cancel"
            style="@style/ButtonK.BlackOutline"
            android:background="@null"/>


    </LinearLayout>

</LinearLayout>
