<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <org.evcs.android.ui.view.shared.EVCSToolbar2
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_toolbar_bottom_extra"
        app:title="@string/survey_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_ariel_standard">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/survey_love_feedback"
                android:layout_marginBottom="@dimen/spacing_large"
                style="@style/Title.Large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/survey_subtitle"
                android:layout_marginBottom="@dimen/spacing_medium_extra"
                style="@style/Body.Medium"/>

            <LinearLayout
                android:id="@+id/survey_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <org.evcs.android.features.shared.StandardTextField
                android:id="@+id/survey_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium_extra"
                style="@style/TextInputStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Body.Medium"/>

            </org.evcs.android.features.shared.StandardTextField>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/survey_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/survey_confirm"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="@dimen/spacing_large"
                android:enabled="false"
                style="@style/ButtonK.Danger"/>

            <TextView
                android:id="@+id/survey_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:text="@string/cancel_plan_cancel"
                style="@style/ButtonK.BlueOutline"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>