<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <org.evcs.android.ui.view.shared.EVCSToolbar2
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/padding_ariel_standard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/over_limit_warning_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_big_extra_k"
                android:layout_gravity="center"
                android:text="@string/over_limit_warning_title"
                style="@style/Title.Large"/>

            <TextView
                android:id="@+id/over_limit_warning_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_big_extra_k"
                android:text="@string/over_limit_warning_text"
                style="@style/Body.Medium"/>

            <org.evcs.android.features.subscriptions.ImageCheckBoxLayout
                android:id="@+id/over_limit_warning_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/over_limit_warning_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium_extra"
        android:text="@string/over_limit_warning_button"
        android:enabled="false"
        style="@style/ButtonK.Orange"/>

    <TextView
        android:id="@+id/over_limit_warning_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_ariel_standard"
        android:layout_marginEnd="@dimen/padding_ariel_standard"
        android:layout_marginBottom="@dimen/padding_ariel_standard"
        android:text="@string/app_cancel"
        style="@style/ButtonK"/>

</LinearLayout>