<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/evcs_white">

    <org.evcs.android.ui.view.shared.EVCSToolbar2
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_toolbar_bottom_extra"
        app:title="@string/pay_balance_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_ariel_standard">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium_extra"
            android:text="@string/pay_balance_pending"
            style="@style/Label.Small"/>

        <TextView
            android:id="@+id/pay_balance_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium_extra"
            style="@style/Body.Medium.Bold"/>

        <TextView
            android:id="@+id/pay_balance_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_big_extra_k"
            style="@style/Body.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_plan_payment_info"
            android:layout_marginBottom="@dimen/spacing_medium"
            style="@style/Label.Small"/>

        <org.evcs.android.ui.view.shared.PaymentMethodView
            android:id="@+id/pay_balance_payment_method"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/pay_balance_process_payment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pay_balance_process_payment"
            style="@style/ButtonK.Orange"/>

    </LinearLayout>

</LinearLayout>
