<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <org.evcs.android.ui.view.shared.EVCSToolbar2
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        custom:title="@string/forgot_password_title"/>

    <org.evcs.android.features.shared.StandardTextField
        android:id="@+id/fragment_forgot_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium_extra"
        android:layout_marginEnd="@dimen/spacing_medium_extra"
        android:layout_marginBottom="@dimen/spacing_large_k"
        style="@style/TextInputStyle"
        custom:label="@string/forgot_password_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            style="@style/Body.Medium"/>

    </org.evcs.android.features.shared.StandardTextField>

    <TextView
        android:id="@+id/fragment_forgot_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium_extra"
        android:layout_marginEnd="@dimen/spacing_medium_extra"
        android:enabled="false"
        android:text="@string/forgot_password_button"
        style="@style/ButtonK.Orange"/>

</LinearLayout>